<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mahycogreen">

    <LinearLayout
        android:id="@+id/lt_ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ques_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_star_q_sr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/str_srno"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal"
                android:layout_marginRight="@dimen/dp_2"/>

            <TextView
                android:id="@+id/tv_ques"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/str_ques"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ques_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_10"
            android:gravity="left"
            android:text="@string/str_quid"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9.3">

                <RatingBar
                    android:id="@+id/rb_ques"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    android:theme="@style/RatingBar" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_ques_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/str_rating"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>