<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mahycogreen"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ques_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_module_q_sr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_2"
                    android:gravity="left"
                    android:text="@string/str_srno"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_module_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/str_module"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_id_module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:gravity="left"
                android:text="@string/str_quid"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edt_module"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:focusable="true"
                android:gravity="top"
                android:hint="@string/write_here"
                android:maxLength="35"
                android:overScrollMode="always"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:text=""
                android:layout_margin="@dimen/dp_10"
                android:textSize="@dimen/sp_14" />
            <!--android:inputType="textMultiLine"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"-->

        </LinearLayout>

    </LinearLayout>

</LinearLayout>