<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/mahycogreen">

    <LinearLayout
        android:id="@+id/feedbk_layout_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mahycogreen"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:scrollbarSize="@dimen/dp_5"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@drawable/scrollview_thumb"
            android:scrollbars="vertical">
            <!--android:scrollbarTrackVertical="@drawable/vertical_scrollview_traack"-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <!--<RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_60"-->>

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_30"
                        android:layout_gravity="center"
                        android:background="@drawable/feedback2" />
               <!-- </RelativeLayout>-->

                <TextView
                    android:id="@+id/tv_feed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/str_feed_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_15"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_feed_desc1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_10"
                        android:gravity="left"
                        android:text="@string/str_feed_desc1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_feed_desc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_10"
                        android:gravity="left"
                        android:text="@string/str_feed_desc2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_feed_desc3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_10"
                        android:gravity="left"
                        android:text="@string/str_feed_desc3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_5"
                    android:weightSum="10">

                    <android.widget.Button
                        android:id="@+id/btn_postpone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_weight="4.5"
                        android:background="@drawable/border_btn"
                        android:padding="@dimen/btn_padding"
                        android:text="@string/postpone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="normal" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp"
                        android:layout_weight="1" />

                    <android.widget.Button
                        android:id="@+id/btn_start_now"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_weight="4.5"
                        android:background="@drawable/border_btn"
                        android:padding="@dimen/btn_padding"
                        android:text="@string/start_now"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="normal" />
                </LinearLayout>-->
                <!--<RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_5"
                    android:weightSum="10">-->
                <!--android:layout_weight="4.5"-->

                    <android.widget.Button
                        android:id="@+id/btn_start_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:background="@drawable/border_btn"
                        android:paddingLeft="@dimen/btn_large_padding"
                        android:paddingTop="@dimen/btn_padding"
                        android:paddingRight="@dimen/btn_large_padding"
                        android:paddingBottom="@dimen/btn_padding"
                        android:text="@string/start_now"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="normal"
                        android:layout_gravity="center"/>
                <!--</RelativeLayout>-->
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedbk_layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mahycogreen"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fadeScrollbars="false"
             android:scrollbarSize="@dimen/dp_10"
             android:scrollbarStyle="insideInset"
             android:scrollbarThumbVertical="@drawable/scrollview_thumb"
             android:scrollbarTrackVertical="@drawable/vertical_scrollview_traack"
             android:scrollbars="vertical">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ll_ques_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ques_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_submit"
                    android:nestedScrollingEnabled="false"
                    android:scrollbarFadeDuration="0"
                    android:scrollbarThumbVertical="@color/mahycoyellow"
                    android:scrollbars="vertical" />

                <android.widget.Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_50"
                    android:background="@drawable/border_btn"
                    android:paddingLeft="@dimen/btn_large_padding"
                    android:paddingTop="@dimen/btn_padding"
                    android:paddingRight="@dimen/btn_large_padding"
                    android:paddingBottom="@dimen/btn_padding"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="normal" />
            </RelativeLayout>

        </LinearLayout>
        <!--
                </ScrollView>
        -->
    </LinearLayout>

    <include
        android:id="@+id/llProgressBar"
        layout="@layout/layout_progressbar_with_text"
        android:visibility="gone" />

</RelativeLayout>